force-app/main/default/objects/sixsense__Batch_Log__c/sixsense__Batch_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object created to capture the results of the batch jobs.</description>
    <label>6sense Batch Log</label>
    <nameField>
        <displayFormat>BL-{00000000}</displayFormat>
        <label>Batch Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>6sense Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>