force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__API_Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>sixsense__API_Start_Datetime__c</fullName>
    <label>API Start Datetime</label>
    <type>DateTime</type>
</CustomField>