force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Chunk_Size__c</fullName>
    <label>Chunk Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>