force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__Ignored_Count__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Ignored_Count__c</fullName>
    <description>This field holds the count of records encountered which are ignorable errors. Typically, missing references to deleted related records.</description>
    <label>Ignored Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>