force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Job_ID__c</fullName>
    <description>ID of the batch job that the log record is for,</description>
    <label>Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>