force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__Log_Message__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Log_Message__c</fullName>
    <description>Field to capture log message.</description>
    <label>Log Message</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>