force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__Record_Count__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Record_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Records Successful</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>