force-app/main/default/objects/sixsense__Batch_Log__c/fields/sixsense__Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Time_Logged__c</fullName>
    <description>Time that the log record was created at.</description>
    <label>Time Logged</label>
    <type>DateTime</type>
</CustomField>