force-app/main/default/objects/sixsense__Batch_Log__c/listViews/sixsense__All.listView-meta.xml
<ListView>
    <fullName>sixsense__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>